objects/Apttus_Config2__FrequencyConversionRate__c.object
<CustomObject>
    <description>Represents the conversion rates used to convert pricing from one frequency or unit of measure to another frequency or unit of measure</description>
    <fields>
        <fullName>Apttus_Config2__ConversionFactor__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The conversion factor to apply to convert one frequency to another</description>
        <label>Conversion Factor</label>
        <precision>18</precision>
        <required>true</required>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FromFrequency__c</fullName>
        <description>The frequency to convert from</description>
        <label>From Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FromUom__c</fullName>
        <description>The unit of measure to convert from</description>
        <inlineHelpText>The unit of measure to convert from</inlineHelpText>
        <label>From Uom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamilyInternal__c</fullName>
        <description>The product family for internal use</description>
        <externalId>true</externalId>
        <inlineHelpText>The product family for internal use</inlineHelpText>
        <label>Product Key (Internal)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamily__c</fullName>
        <description>The product family</description>
        <inlineHelpText>The product family</inlineHelpText>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated product</description>
        <inlineHelpText>ID of the associated product</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Frequency/UOM Conversion Rates</relationshipLabel>
        <relationshipName>FrequencyUOMConversionRates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ToFrequency__c</fullName>
        <description>The frequency to convert to</description>
        <label>To Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ToUom__c</fullName>
        <description>The unit of measure to convert to</description>
        <inlineHelpText>The unit of measure to convert to</inlineHelpText>
        <label>To Uom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The conversion metric type</description>
        <inlineHelpText>The conversion metric type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Frequency</fullName>
                    <default>true</default>
                    <label>Frequency</label>
                </value>
                <value>
                    <fullName>Unit Of Measure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Frequency/UOM Conversion Rate</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__FromFrequency__c</columns>
        <columns>Apttus_Config2__ToFrequency__c</columns>
        <columns>Apttus_Config2__ConversionFactor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0000000000}</displayFormat>
        <label>Conversion Rate Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Frequency/UOM Conversion Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>